video now goes full screen. avoid double scrollbars

--- a/css/ledbib.css
+++ b/css/ledbib.css
@@ -6,6 +6,11 @@ body, html {
   font-weight: bold;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+}
+
+body::-webkit-scrollbar { 
+    display: none; 
 }
 
 #rings {
@@ -27,8 +32,7 @@ svg, #main {
   top: 0px;
   width: calc(100% - 250px);
   height: 100%;
-  -webkit-overflow-scrolling: touch;
-  overflow-y: scroll;
+
 }
 
 /* different width and top padding for mobiles */
@@ -38,7 +42,8 @@ svg, #main {
     left: 10px;
     top: 400px;
     height: calc(100% - 400px);
-    
+    -webkit-overflow-scrolling: touch;
+    overflow-y: scroll;
   }
 }
 
